changes for review comments

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div aria-label='Map' id="map"></div>
+    <section role="application" aria-label="Map with restaurants" id="map-container">
+      <div role="application" aria-label="Map with restaurants" id="map"></div>
     </section>
     <section>
       <div class="filter-options">
