--- a/restaurant.html
+++ b/restaurant.html
@@ -32,14 +32,14 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div aria-label='Map' id="map"></div>
+    <section role="application" aria-label="Map with restaurants" id="map-container">
+      <div role="application" aria-label="Map with restaurants" id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img" alt="Restaurant scene">
+      <h2 id="restaurant-name"></h2>
+      <img id="restaurant-img" alt="Image of the scence inside of the restaurant">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
