--- a/restaurant.html
+++ b/restaurant.html
@@ -18,10 +18,10 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a tabindex="1" aria-label='Home' href="/">Restaurant Reviews</a></h1>
+      <h1><a tabindex="0" aria-label='Home' href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" aria-label="breadcrumb" role="navigation">
       <li><a tabindex="1" aria-label='Home' href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
