updating for review comments

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main id="maincontent">
     <section role="application" aria-label="Map with restaurants" id="map-container">
-      <div role="application" aria-label="Map with restaurants" id="map"></div>
+      <div role="application" aria-label="Map with restaurants" id="map" alt="Image of map of New York and Jersey City"></div>
     </section>
     <section>
       <div class="filter-options">
