--- a/restaurant.html
+++ b/restaurant.html
@@ -38,11 +38,15 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h2 id="restaurant-name"></h2>
-      <img id="restaurant-img" alt="Image of the scence inside of the restaurant">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <div> 
+        <h2 id="restaurant-name"></h2>
+        <img id="restaurant-img" alt="Image of the scence inside of the restaurant">
+        <p id="restaurant-cuisine"></p>
+        <p id="restaurant-address"></p>
+        <table id="restaurant-hours"></table>
+      </div>
+      
+      
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
